--- a/index.html
+++ b/index.html
@@ -69,38 +69,23 @@
     <!-- end header section -->
     <!-- hero section -->
     <section class="hero_section">
+		<div class="row">
+		<div class="col-md-4"></div>
+			<div class="col-md-4">		<img src="images/rotativa@3x.png" width="70%" alt="rotativa">
+</div>
+			<div class="col-md-4"></div>
+		</div>
+		
+		<div class="row">
+		<div class="col-md-4"></div>
+			<div class="col-md-4">		<img src="images/Recurso 5@3x.png" width="70%" alt="rotativa">
+</div>
+			<div class="col_md-4"></div>
+		</div>
       <div class="hero_detail">
-        <h1>
-          <span>
-            A
-          </span>
-          <span>
-            R
-          </span>
-          <span>
-            M
-          </span>
-          <span>
-            A
-          </span>
-          <span>
-            T
-          </span>
-          <span>
-            O
-          </span>
-			<span>
-            S
-          </span>
-			<span>
-            T
-          </span>
-			<span>
-            E
-          </span>
-        </h1>
+        <h1>&nbsp;</h1>
         <h3>
-          Publicidad
+
           </h3>
       </div>
       <div class="hero_btn-box">
@@ -290,7 +275,7 @@
             </div>
             <div class="detail-box">
               <p>
-               armatostepublicidad23@gmail.com
+               <a href="mailto:armatostepublicidad23@gmail.com">armatostepublicidad23@gmail.com</a>
               </p>
             </div>
           </div>
@@ -302,7 +287,7 @@
             </div>
             <div class="detail-box">
               <p>
-                +57 317 486 69 12
+				  <a href="tel:+573174866912">+57 317 486 69 12</a>
               </p>
             </div>
           </div>
