--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@ Llegó a la ciudad por gasto propio del monseñor José María Guiot quien en un
   <section class="container-fluid footer_section">
     <p>
       &copy; 2025 Desarrollado por BH Design
-      <a href="https://html.design/">Todos lo derechos reservados Armatoste Publicidad</a>
+      <a href="https://html.design/">Todos los derechos reservados Armatoste Publicidad</a>
     </p>
   </section>
   <!-- footer section -->
