--- a/client.html
+++ b/client.html
@@ -157,7 +157,7 @@
   <section class="container-fluid footer_section">
     <p>
       &copy; 2025 Desarrollado por BH Design
-      <a href="https://html.design/">Todos lo derechos reservados Armatoste Publicidad</a>
+      <a href="https://html.design/">Todos los derechos reservados Armatoste Publicidad</a>
     </p>
   </section>
 
