--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           Por que escogernos 
         </h2>
         <p class="">
-          Somos una empresa que cuenta con el equipo técnico y el personal mejor capacitado para lograr un diseño agradable y lamativo y dar un toque especial a todos nuestro clientes, nuestra experiencia nos posiciona en el mercado y nuestro clientes nos dan la credibilidad necesaria para un trabajo eficiente y confiable
+          Somos una empresa que cuenta con el equipo técnico y el personal mejor capacitado para lograr un diseño agradable y llamativo y dar un toque especial a todos nuestro clientes, nuestra experiencia nos posiciona en el mercado y nuestro clientes nos dan la credibilidad necesaria para un trabajo eficiente y confiable.
         </p>
       </div>
     </div>
@@ -303,7 +303,7 @@
   <section class="container-fluid footer_section">
     <p>
       &copy; 2025 Desarrollado por BH Design
-      <a href="https://html.design/">Todos lo derechos reservados Armatoste Publicidad</a>
+      <a href="https://html.design/">Todos los derechos reservados Armatoste Publicidad</a>
     </p>
   </section>
   <!-- footer section -->
